# SchroedingerEquation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  main4.cpp  parallelSchroedinger.cpp  serialSchroedinger.cpp
lib/: setup.py
lib/Schroedinger.egg-info/: PKG-INFO  SOURCES.txt
lib/viennaio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: error.py
src/: io.hpp
src/1D/: Schroedinger1D.hpp  Schroedinger1DParallel.hpp
src/math/: Jacobi.hpp  Jacobi2.hpp  JacobiParallel.hpp  JacobiSerial.hpp  Mat2.hpp  Mat3.hpp  MatParallel.hpp  MatSerial.hpp  Matrix.hpp  SparseMatrix.hpp
src/pybind11/: pyIO.cpp
test/: FDTD.py  error.py  plot.py  plotparallel.py  time.py
